# TaxProtest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  Pipfile  README.md  README_SHORT.md  REQUIREMENTS.md  SETUP_SUMMARY.md  add_property_ratings.py  add_residential_estimates.py  add_simple_ratings.py  app.py  check_db.py  check_import_results.py  cleanup_analysis.py  cleanup_data.py  compile_check.py  corruption_report.md  create_dummy_geo_table.py  db.py  docker-compose.yml  docker-quickstart.ps1  docker_init.py  docker_run.py  download-extract.py  download_extract.py  download_files.bash  extract_data.py  import_building_res.py  import_owners.py  import_parcels_to_property_geo.py  import_real_acct.py  insert-data.py  (+27 more)
app/: __init__.py  app.py
comparables/: __init__.py  config.py  engine.py  export.py  scoring.py  stats.py
docker/: README.md  docker_init.py  docker_run.py  quickstart.sh
docs/: REQUIREMENTS.md  step1_download.md  step2_extract.md  step3_load.md  step4_flask.md
legacy/: download_extract.py
scripts/: README.md  download_extract.py  extract_data.py  extract_gis_nested.py  import_hcad_postgres.py  ingest_postgres.py  init_postgres.sql  probe_state_class.py  process_gis_data.py  run_app.ps1  run_init_postgres.py  salvage_dbf.py  test_parcels_download_extract.py  update.py
static/: style.css
taxprotest_site/: Dockerfile  README.md  __init__.py  manage.py  requirements.txt
templates/: base.html  comparables.html  index.html  (+1 more)
(+53 files in other folders)
